Phoenix: implement PhoenixMarket